@@ -1,3 +1,9 @@
+2009-03-06 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Fall back to default dictionary if specified variant is
+	  not available.
+	* Show more ugly warnings when SHOW_UGLY_WARNINGS=1.
+
 2009-02-15 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Allow changing dictionary variant in settings.
